appId: com.tap_pay
---
# Enter Transaction Amount Flow
# Parameters: AMOUNT (as individual digits)
- tapOn:
    text: "${DIGIT_1}"
    waitToSettleTimeoutMs: 200
- tapOn:
    text: "${DIGIT_2}"
    waitToSettleTimeoutMs: 200
- tapOn:
    text: "${DIGIT_3}"
    waitToSettleTimeoutMs: 200
- tapOn:
    text: "${DIGIT_4}"
    waitToSettleTimeoutMs: 200
- tapOn:
    text: "CONFIRM"
    waitToSettleTimeoutMs: 1000
